cluster-cd/apps/base/home/app-daemon/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name app-daemon
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 5050
      protocol: TCP
    - name: vscode
      port: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
