cluster-cd/apps/base/home/app-daemon/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress: "externaldns"
  labels:
    app.kubernetes.io/instance: app-daemon
    app.kubernetes.io/name: &name app-daemon
  name: *name
spec:
  ingressClassName: nginx
  rules:
    - host: &host appdaemon.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: app-daemon
                port:
                  name: api
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: app-daemon-tls
